MOVE-3690 Migrert til Java 21, Jakarta og SB 3.4.2 (noen tester brekker)